brush-parser/src/parser/tests/snapshots/brush_parser__parser__tests__winnow_issues__parse_ifs_command_substitution_multiline.snap
---
source: brush-parser/src/parser/tests/winnow_issues.rs
expression: "ParseResult { input, result: &result }"
---
ParseResult(
  input: "IFS=$\'\\n\'\nread -a arr <<< $\'item1\\nitem2\\nitem3\'\necho \"Items: ${arr[@]}\"",
  result: Program(
    complete_commands: [
      CompoundList([
        CompoundListItem(AndOrList(
          first: Pipeline(
            seq: [
              Simple(SimpleCommand(
                prefix: Some(CommandPrefix([
                  AssignmentWord(Assignment(
                    name: VariableName("IFS"),
                    value: Scalar(Word(
                      value: "$\'\\n\'",
                      loc: "[location]",
                    )),
                    loc: "[location]",
                  ), Word(
                    value: "IFS=$\'\\n\'",
                    loc: "[location]",
                  )),
                ])),
              )),
            ],
          ),
        ), Sequence),
      ]),
      CompoundList([
        CompoundListItem(AndOrList(
          first: Pipeline(
            seq: [
              Simple(SimpleCommand(
                word_or_name: Some(Word(
                  value: "read",
                  loc: "[location]",
                )),
                suffix: Some(CommandSuffix([
                  Word(Word(
                    value: "-a",
                    loc: "[location]",
                  )),
                  Word(Word(
                    value: "arr",
                    loc: "[location]",
                  )),
                  IoRedirect(HereString(None, Word(
                    value: "$\'item1\\nitem2\\nitem3\'",
                    loc: "[location]",
                  ))),
                ])),
              )),
            ],
          ),
        ), Sequence),
      ]),
      CompoundList([
        CompoundListItem(AndOrList(
          first: Pipeline(
            seq: [
              Simple(SimpleCommand(
                word_or_name: Some(Word(
                  value: "echo",
                  loc: "[location]",
                )),
                suffix: Some(CommandSuffix([
                  Word(Word(
                    value: "\"Items: ${arr[@]}\"",
                    loc: "[location]",
                  )),
                ])),
              )),
            ],
          ),
        ), Sequence),
      ]),
    ],
  ),
)
