brush-parser/src/parser/tests/snapshots/brush_parser__parser__tests__winnow_issues__parse_ifs_newline_handling.snap
---
source: brush-parser/src/parser/tests/winnow_issues.rs
expression: "ParseResult { input, result: &result }"
---
ParseResult(
  input: "IFS=$\'\\n\'\ndata=\"line1\nline2\nline3\"\nfor line in $data; do\n  echo \"Line: $line\"\ndone",
  result: Program(
    complete_commands: [
      CompoundList([
        CompoundListItem(AndOrList(
          first: Pipeline(
            seq: [
              Simple(SimpleCommand(
                prefix: Some(CommandPrefix([
                  AssignmentWord(Assignment(
                    name: VariableName("IFS"),
                    value: Scalar(Word(
                      value: "$\'\\n\'",
                      loc: "[location]",
                    )),
                    loc: "[location]",
                  ), Word(
                    value: "IFS=$\'\\n\'",
                    loc: "[location]",
                  )),
                ])),
              )),
            ],
          ),
        ), Sequence),
      ]),
      CompoundList([
        CompoundListItem(AndOrList(
          first: Pipeline(
            seq: [
              Simple(SimpleCommand(
                prefix: Some(CommandPrefix([
                  AssignmentWord(Assignment(
                    name: VariableName("data"),
                    value: Scalar(Word(
                      value: "\"line1\nline2\nline3\"",
                      loc: "[location]",
                    )),
                    loc: "[location]",
                  ), Word(
                    value: "data=\"line1\nline2\nline3\"",
                    loc: "[location]",
                  )),
                ])),
              )),
            ],
          ),
        ), Sequence),
      ]),
      CompoundList([
        CompoundListItem(AndOrList(
          first: Pipeline(
            seq: [
              Compound(ForClause(ForClauseCommand(
                variable_name: "line",
                values: Some([
                  Word(
                    value: "$data",
                    loc: "[location]",
                  ),
                ]),
                body: DoGroupCommand(
                  list: CompoundList([
                    CompoundListItem(AndOrList(
                      first: Pipeline(
                        seq: [
                          Simple(SimpleCommand(
                            word_or_name: Some(Word(
                              value: "echo",
                              loc: "[location]",
                            )),
                            suffix: Some(CommandSuffix([
                              Word(Word(
                                value: "\"Line: $line\"",
                                loc: "[location]",
                              )),
                            ])),
                          )),
                        ],
                      ),
                    ), Sequence),
                  ]),
                  loc: "[location]",
                ),
                loc: "[location]",
              )), None),
            ],
          ),
        ), Sequence),
      ]),
    ],
  ),
)
