brush-parser/src/parser/tests/snapshots/brush_parser__parser__tests__winnow_issues__parse_ifs_tab_handling.snap
---
source: brush-parser/src/parser/tests/winnow_issues.rs
expression: "ParseResult { input, result: &result }"
---
ParseResult(
  input: "IFS=$\'\\t\'\ndata=\"col1\\tcol2\\tcol3\"\nfor col in $data; do\n  echo \"Col: $col\"\ndone",
  result: Program(
    complete_commands: [
      CompoundList([
        CompoundListItem(AndOrList(
          first: Pipeline(
            seq: [
              Simple(SimpleCommand(
                prefix: Some(CommandPrefix([
                  AssignmentWord(Assignment(
                    name: VariableName("IFS"),
                    value: Scalar(Word(
                      value: "$\'\\t\'",
                      loc: "[location]",
                    )),
                    loc: "[location]",
                  ), Word(
                    value: "IFS=$\'\\t\'",
                    loc: "[location]",
                  )),
                ])),
              )),
            ],
          ),
        ), Sequence),
      ]),
      CompoundList([
        CompoundListItem(AndOrList(
          first: Pipeline(
            seq: [
              Simple(SimpleCommand(
                prefix: Some(CommandPrefix([
                  AssignmentWord(Assignment(
                    name: VariableName("data"),
                    value: Scalar(Word(
                      value: "\"col1\\tcol2\\tcol3\"",
                      loc: "[location]",
                    )),
                    loc: "[location]",
                  ), Word(
                    value: "data=\"col1\\tcol2\\tcol3\"",
                    loc: "[location]",
                  )),
                ])),
              )),
            ],
          ),
        ), Sequence),
      ]),
      CompoundList([
        CompoundListItem(AndOrList(
          first: Pipeline(
            seq: [
              Compound(ForClause(ForClauseCommand(
                variable_name: "col",
                values: Some([
                  Word(
                    value: "$data",
                    loc: "[location]",
                  ),
                ]),
                body: DoGroupCommand(
                  list: CompoundList([
                    CompoundListItem(AndOrList(
                      first: Pipeline(
                        seq: [
                          Simple(SimpleCommand(
                            word_or_name: Some(Word(
                              value: "echo",
                              loc: "[location]",
                            )),
                            suffix: Some(CommandSuffix([
                              Word(Word(
                                value: "\"Col: $col\"",
                                loc: "[location]",
                              )),
                            ])),
                          )),
                        ],
                      ),
                    ), Sequence),
                  ]),
                  loc: "[location]",
                ),
                loc: "[location]",
              )), None),
            ],
          ),
        ), Sequence),
      ]),
    ],
  ),
)
